Ensure accessible color contrast

--- a/nuxt-app/app/assets/css/variables.css
+++ b/nuxt-app/app/assets/css/variables.css
@@ -5,7 +5,7 @@
   --color-red: rgb(255 0 0 / 100%);
   --color-brown: rgb(179 120 68);
   --color-mustard: rgb(249 184 93 / 100%);
-  --color-viridian: rgb(59 112 125 / 100%);
+  --color-viridian: rgb(51, 95, 106);
   --color-mint: rgb(90 171 130 / 100%);
   --color-cerulean: rgb(46 124 246 / 100%);
   --color-white: rgb(255 255 255 / 100%);
